apps/vulnerable-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerable-web
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels: { app: vulnerable-web }
  template:
    metadata:
      labels: { app: vulnerable-web }
    spec:
      serviceAccountName: vulnerable-admin
      containers:
        - name: web
          image: bkimminich/juice-shop:v17.1.1
          securityContext:
            privileged: true
            runAsUser: 0
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SYS_ADMIN
                - NET_ADMIN
          ports:
            - containerPort: 3000
